fix:  Markup is visible in checkout error notices  (https://github.com/woocommerce/woocommerce-blocks/pull/6800)
* Enabled __unstableHTML hidden option for HTML rendering within notices.

* Fixed margin-bottom for HTML notice content

* Fixed margin-top for HTML notice content

* Attempt to fix a broken e2e test

--- a/plugins/woocommerce-blocks/assets/js/base/context/providers/store-notices/components/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/context/providers/store-notices/components/style.scss
@@ -17,6 +17,14 @@
 				vertical-align: text-top;
 			}
 		}
+		.components-notice__content > div:not(.components-notice__actions) {
+			*:first-child {
+				margin-top: 0;
+			}
+			*:last-child {
+				margin-bottom: 0;
+			}
+		}
 	}
 	.wc-block-components-notices__notice + .wc-block-components-notices__notice {
 		margin-top: 1em;
